--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>save</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
 <form action="/member/save" method="post">
-    이메일: <input type="text" name="memberEmail"> <br>
+    이메일: <input type="text" name="memberEmail" id="memberEmail" onkeyup="emailCheck()"> <br>
+    <p id="check-result"></p>
     비밀번호: <input type="password" name="memberPassword"> <br>
     이름: <input type="text" name="memberName"> <br>
     <input type="submit" value="회원가입">
 </form>
 </body>
+<script th:inline="javascript">
+    const emailCheck = () => {
+        const email = document.getElementById("memberEmail").value;
+        const checkResult = document.getElementById("check-result");
+        console.log("입력값: ", email);
+        $.ajax({
+            type: "post",
+            url: "/member/email-check",
+            data: {
+                "memberEmail": email
+            },
+            success: function(res) {
+                console.log("요청성공",res);
+                if (res == "ok") {
+                    console.log("사용 가능한 이메일")
+                    checkResult.style.color = "green";
+                    checkResult.innerHTML = "사용 가능한 이메일";
+                } else {
+                    console.log("이미 사용중인 이메일")
+                    checkResult.style.color = "red";
+                    checkResult.innerHTML = "이미 사용중인 이메일";
+                }
+            },
+            error: function(err) {
+                console.log("에러발생", err);
+            }
+        });
+    }
+</script>
 </html>
